    - Lithuanian updated. Closes: #252809
    - German update
    - Dutch update. Closes: #253169
    - Traditional Chinese added. Closes: #253256
    - Spanish update
    - Hebrew update. Closes: #254090
    - Czech update. Closes: #254188
    - Bosnian update
  * Christian Perrier
    - Shorten the main template to fit it in one screen
      Closes: #250951

 -- Christian Perrier <bubulle@debian.org>  Sun, 13 Jun 2004 08:56:28 +0200

popularity-contest (1.20) unstable; urgency=low

  * Translations
    - Basque update. Closes: #243768
    - Norwegian Nynorsk update. Closes: #249681
  * Change regexp used to find files with relevant atime to handle perl and
    python libraries.

 -- Bill Allombert <ballombe@debian.org>  Wed, 26 May 2004 12:54:25 +0200

popularity-contest (1.19) unstable; urgency=low

  * Translations
    - Turkish by Recai Oktas. Closes: #244164
    - Russian update. Closes: #245000
    - Slovak by Miroslav Kure. Closes: #245672
    - French typo corrected.
  * Bill Allombert
    - Update server-side scripts to current popcon.debian.org version.
    - Change popularity-contest to report the popularity-contest version
      instead of the Debian release which is not reliable.
    - Update FAQ accordingly.
    - Fix some typo in FAQ and README.

 -- Bill Allombert <ballombe@debian.org>  Fri, 14 May 2004 11:35:30 +0200

popularity-contest (1.18) unstable; urgency=low

  * Bill Allombert
    - debian/postinst:
      + Fix previous attempt to fix MY_HOSTID being equal to EMPTYID.
      + Fix bogus MY_HOSTID generated by popcon releases affected by #203841.
        Closes: #240603
      + Remove check for an impossible error condition.
    - Add FAQ:
      + Document valid sender domain problem. Closes: #241383
      + Document the noatime problem. Closes: #239939
    - README, debian/popularity.contest.8:
      + Add pointers to the FAQ.
    - sync server-side scripts with popcon.debian.org: