@@ -14,9 +14,6 @@ clean:
 	dh_testdir
 	dh_testroot
 	dh_clean
-	# Remove transition copy while we wait for all users to change from
-	# no_NO to nb_NO [pere 2004-02-27]
-	$(RM) debian/po/no.po
 
 install:
 	dh_testdir
@@ -41,9 +38,6 @@ binary-indep: build install
 	dh_installmenu
 	dh_installcron
 	dh_installmanpages
-	# Make transition copy while we wait for all users to change from
-	# no_NO to nb_NO [pere 2004-02-27]
-	cd debian/po; ln -s nb.po no.po
 	dh_installdebconf
 	dh_installchangelogs
 	dh_perl -d
