@@ -17,6 +17,9 @@ popularity-contest (1.21) UNRELEASED; urgency=low
   * Christian Perrier
     - Shorten the main template to fit it in one screen
       Closes: #250951
+  * Petter Reinholdtsen
+    - Remove nb.po/no.po transition code.  The duplication is now
+      handled by po-debconf via dh_installdebconf.
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 13 Jun 2004 08:56:28 +0200
 
